@@ -1,12 +1,7 @@
 {
-  "count": 7,
-  "uniques": 4,
+  "count": 2,
+  "uniques": 2,
   "clones": [
-    {
-      "timestamp": "2023-07-11T00:00:00Z",
-      "count": 5,
-      "uniques": 3
-    },
     {
       "timestamp": "2023-07-16T00:00:00Z",
       "count": 1,
